--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -1,121 +1,282 @@
 *{
-  margin: 0;
-  padding: 0;
-  font-family: Arial, sans-serif;
-  box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    font-family: Arial, sans-serif;
+    box-sizing: border-box;
 }
 
+/* BODY */
 
-.container{
-    width: 100%;
-    height: 100vh;
-    background-image: linear-gradient(rgba(65,40,0,0.8),rgba(65,40,0,0.8)), url('https://png.pngtree.com/background/20230614/original/pngtree-music-studio-with-lots-of-equipment-and-keyboard-picture-image_3487998.jpg');
-    background-position: center;
+body {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-height: 100vh;
+    background-image: linear-gradient(rgba(50,30,10,0.6),rgba(50,30,10,0)), url('/paypalclone/src/main/resources/static/img/image.jpg');
     background-size: cover;
-    position: relative;
+    background-position: center;
 }
 
-.form-box{
-    width: 20%;
-    max-width: 450 px;
+
+/* HEADER */
+
+
+header {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    padding: 20px 100px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    z-index: 99;
+}
+
+.logo {
+    font-size: 4em;
+    color: #cecece;
+    user-select: none;
+    text-shadow: 10px 10px 20px rgba(0, 0, 0, 20);
+}
+
+.navigation a {
+    position: relative;
+    font-size: 1.1em;
+    color: #cecece;
+    text-decoration: none;
+    font-weight: 500;
+    margin-left: 40px;
+}
+
+.navigation a::after {
+    content: "";
     position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%,-50%);
-    background: #fff;
-    padding: 50px 60px 70px;
+    left: 0;
+    bottom: -5px;
+    width: 100%;
+    height: 3px;
+    background: #cecece;
+    border-radius: 5x;
+    transform: scaleX(0);
+    transition: transform .5s;
+}
+
+.navigation a:hover::after {
+    transform: scaleX(1);
+}
+
+.navigation .btnLogin-popup {
+    width: 130px;
+    height: 50px;
+    background: transparent;
+    border: 2px solid #cecece;
+    outline: none;
+    border-radius: 6px;
+    cursor: pointer;
+    font-size: 1.1em;
+    color: #cecece;
+    font-weight: 500;
+    margin-left: 40px;
+    transition: .5s;
+}
+
+.navigation .btnLogin-popup:hover {
+    background: #cecece;
+    color: #341f13ef;
+}
+
+
+/*WELCOME*/
+
+
+.welcome-title {
+    position: absolute;
+    font-size: 4em;
+    color: #cecece;
+    text-shadow: 10px 10px 20px rgba(0, 0, 0, 20);
+}
+
+
+/*LOGIN-REGISTER*/
+
+
+.wrapper {
+    position: relative;
+    width: 400px;
+    height: 440px;
+    right: 620px;
+    background: transparent;
+    border: 2px solid rgba(194, 186, 181, 1);
+    border-radius: 20px;
+    backdrop-filter: blur(20px);
+    box-shadow: 50px 50px 50px rgba(0, 0, 0, .5);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    overflow: hidden;
+    transform: scale(0);
+    transition: transform .5s ease, height .2s ease;
+}
+
+.wrapper.active-popup {
+    transform: scale(1);
+}
+
+.wrapper.active {
+    height: 520px;
+}
+
+.wrapper .form-box {
+    width: 100%;
+    padding: 40px;
+}
+
+.wrapper .form-box.login {
+    transition: transform .18s ease;
+    transform: translateX(0);
+}
+
+.wrapper.active .form-box.login {
+    transition: none;
+    transform: translateX(-400px);
+}
+
+.wrapper .form-box.register {
+    position: absolute;
+    transition: none;
+    transform: translateX(400px);
+}
+
+.wrapper.active .form-box.register {
+    transition: transform .18s ease;
+    transform: translateX(0);
+}
+
+
+
+
+.wrapper .icon-close {
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 45px;
+    height: 45px;
+    background: #341f13ef;
+    font-size: 1.9em;
+    color: #cecece;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-bottom-left-radius: 20px;
+    cursor: pointer;
+    z-index: 1;
+}
+
+.form-box h2 {
+    font-size: 2em;
+    color: #341f13ef;
     text-align: center;
 }
 
-.form-box h1{
-    font-size: 30px;
-    margin-bottom: 60px;
-    color: #613723;
+.input-box {
     position: relative;
+    width: 100%;
+    height: 50px;
+    border-bottom: 2px solid #341f13ef;
+    margin: 30px 0;
 }
 
-.form-box h1::after{
-    content: '';
-    width: 30px;
-    height: 4px;
-    border-radius: 3px;
-    background: #613723;
+.input-box label {
     position: absolute;
-    bottom: -12px;
-    left: 50%;
-    transform: translate(-50%);
+    top: 50%;
+    left: 5px;
+    transform: translateY(-50%);
+    font-size: 1.3em;
+    color: #341f13ef;
+    font-weight: 500;
+    pointer-events: none;
+    transition: .5s;
 }
 
-.input-field{
-    background: #eaeaea;
-    margin: 15px 0;
-    border-radius: 3px;
-    display: flex;
-    align-items: center;
-    max-height: 65px;
-    transition: max-height 0.5s;
-    overflow: hidden;
-
+.input-box input:focus~label,
+.input-box input:valid~label {
+     top: -5px;
 }
 
-input{
+.input-box input {
     width: 100%;
+    height: 120%;
     background: transparent;
-    border: 0;
-    outline: 0;
-    padding: 18px 15px;
+    border: none;
+    outline: none;
+    font-size: 1.3em;
+    color: #341f13ef;
+    font-weight: 540;
+    padding: 0 35px 0 5px;
 }
 
-.input-field i{
-    margin-left: 15px;
-    color: #999;
+.input-box .icon {
+    position: absolute;
+    right: 8px;
+    font-size: 1.4em;
+    color: #341f13ef;
+    line-height: 57px;
 }
 
-form p{
-    text-align: left;
-    font-size: 13px;
-}
-
-form p a{
-    text-decoration: none;
-    color: #987753;
-}
-
-.btn-field{
-    width: 100%;
+.remember-forgot {
+    font-size: 1em;
+    color: #341f13ef;
+    font-weight: 500;
+    margin: -15px 0 15px;
     display: flex;
     justify-content: space-between;
 }
 
-.btn-field button{
-    flex-basis: 48%;
-    background: #613723;
-    color: #fff;
-    height: 40px;
-    border-radius: 20px;
-    border: 0;
-    outline: 0;
+.remember-forgot label input {
+    accent-color: #341f13ef;
+    margin-right: 3px;
+}
+
+.remember-forgot a {
+    color: #341f13ef;
+    text-decoration: none;
+}
+
+.remember-forgot a:hover {
+    text-decoration: underline;
+}
+
+.btn {
+    width: 100%;
+    height: 45px;
+    background: #341f13ef;
+    border: none;
+    outline: none;
+    border-radius: 6px;
     cursor: pointer;
-    transition: background 1s;
+    font-size: 1.2em;
+    color: #cecece;
+    font-weight: 500;
 }
 
-.input-group{
-    height: 250px;
+.login-register {
+    font-size: 1em;
+    color: #341f13ef;
+    text-align: center;
+    font-weight: 500;
+    margin: 25px 0px 10px;
+}
+.login-register p a {
+    color: #341f13ef;
+    text-align: left;
+    text-decoration: none;
+    font-weight: 600;
 }
 
-.btn-field button.disable{
-    background: #eaeaea;
-    color: #555;
+.login-register p a:hover {
+    text-decoration: underline;
 }
-
-
-
-
-
-
-
-
-
 
 
 
