--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -2,14 +2,18 @@
 <html xmlns:th="http:/>/www.thymeleaf.org" lang="en">
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Kate's Paypal Clone - Welcome!</title>
+    <title>PayPal Clone - Welcome!</title>
     <link rel="stylesheet" href="css/style.css">
     <script src="https://kit.fontawesome.com/49d89cdd8b.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <div th:replace="~{fragments :: header}"></div>
+    <div th:replace="~{fragments :: footer}"></div>
     <div class="welcome-title">
-        <h1>Welcome!</h1>
+        <h1>Welcome to</h1>
+        <h1>PayPal Clone!</h1>
+        <p>Discover the easiest way</p>
+        <p>to send your money to nowhere!</p>
     </div>
 </body>
 </html>
