--- a/src/main/resources/templates/register_page.html
+++ b/src/main/resources/templates/register_page.html
@@ -2,14 +2,17 @@
 <html xmlns:th="http:/>/www.thymeleaf.org" lang="en">
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Kate's Paypal Clone - Registration</title>
+    <title>Sign Up for PayPal Clone</title>
     <link rel="stylesheet" href="css/style.css">
     <script src="https://kit.fontawesome.com/49d89cdd8b.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <div th:replace="~{fragments :: header}"></div>
-    <div class="welcome-title">
-        <h1>Welcome!</h1>
+    <div th:replace="~{fragments :: footer}"></div>
+
+
+    <div class="register-title">
+        <h1>Sign Up for PayPal Clone</h1>
     </div>
 
     <div class="wrapper-register">
