--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -115,7 +115,11 @@ header {
 
 .welcome-title {
     position: absolute;
-    font-size: 4em;
+    left: 150px;
+    align-content: space-between;
+    text-align: left;
+    line-height: 1.3;
+    font-size: 3em;
     color: #cecece;
     text-shadow: 10px 10px 20px rgba(0, 0, 0, 20);
 }
@@ -123,12 +127,20 @@ header {
 
 /*  LOGIN  */
 
+.login-title {
+    position: absolute;
+    top: 120px;
+    font-size: 1.6em;
+    text-align: center;
+    color: #cecece;
+    text-shadow: 10px 10px 20px rgba(0, 0, 0, 20);
+}
+
 
 .wrapper-login {
     position: relative;
     width: 400px;
     height: 440px;
-    right: 620px;
     background: transparent;
     border: 2px solid rgba(194, 186, 181, 1);
     border-radius: 20px;
@@ -159,12 +171,20 @@ header {
 
 /*  REGISTER  */
 
+.register-title {
+    position: absolute;
+    top: 120px;
+    font-size: 1.6em;
+    text-align: center;
+    color: #cecece;
+    text-shadow: 10px 10px 20px rgba(0, 0, 0, 20);
+}
+
 
 .wrapper-register  {
     position: relative;
     width: 400px;
     height: 480px;
-    right: 620px;
     background: transparent;
     border: 2px solid rgba(194, 186, 181, 1);
     border-radius: 20px;
@@ -315,24 +335,3 @@ header {
 }
 
 
-/*  JS ACTIVE  */
-
-
-/*.wrapper.active .form-box.login {*/
-/*    transition: none;*/
-/*    transform: translateX(-400px);*/
-/*}*/
-
-
-/*.wrapper-register.active .form-box.register {*/
-/*    transition: transform .18s ease;*/
-/*    transform: translateX(0);*/
-/*}*/
-
-/*.wrapper.active-popup {*/
-/*    transform: scale(1);*/
-/*}*/
-
-/*.wrapper.active {*/
-/*    height: 520px;*/
-/*}*/
