--- a/src/main/resources/templates/login_page.html
+++ b/src/main/resources/templates/login_page.html
@@ -3,16 +3,17 @@
 
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Kate's Paypal Clone - Login</title>
+    <title>Log in to your PayPal Clone account</title>
     <link rel="stylesheet" href="css/style.css">
     <script src="https://kit.fontawesome.com/49d89cdd8b.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
     <div th:replace="~{fragments :: header}"></div>
+    <div th:replace="~{fragments :: footer}"></div>
 
-    <div class="welcome-title">
-        <h1>Welcome!</h1>
+    <div class="login-title">
+        <h1>Log in to your PayPal Clone account</h1>
     </div>
 
     <div class="wrapper-login">
