--- a/src/main/resources/templates/my_account.html
+++ b/src/main/resources/templates/my_account.html
@@ -12,18 +12,19 @@
 
 <!--Summary Main Sections-->
 
-    <div class="balance">
-        <h2>PayPal Clone Balance</h2>
-        <h2>$0.00</h2>
-        <h3>Available</h3>
-        <button class="btnTransferMoney">Transfer Money</button>
+    <div class="main_elements">
+        <div class="balance">
+            <h2>PayPal Clone Balance</h2>
+            <h2>$0.00</h2>
+            <p>Available</p>
+            <button class="btnTransferMoney">Transfer Money</button>
+        </div>
+        <div class="rewards">
+            <h2>PayPal Clone Rewards</h2>
+            <h2>0 points</h2>
+            <p>($0.00 redemption value)</p>
+        </div>
     </div>
-    <div class="rewards">
-        <h2>PayPal Clone Rewards</h2>
-        <h2>0 points</h2>
-        <h3>($0.00 redemption value)</h3>
-    </div>
-
 <!--Summary Main Buttons-->
 
     <div class="button">
@@ -38,25 +39,35 @@
 <!--Summary Main Icons Menu-->
 
     <div class="summary_menu_icon">
-        <a href="#" class="directToBank-link">
-<!--            <span class="icon"><i class="paper_plane_cursor"></i></span>-->
-            <button class="btnLogin-popup">Direct To Bank</button>
+        <a href="#" class="menu_link">
+
+            <span class="menu_icon"><i class="fa-solid fa-paper-plane"></i></span>
+            <p class="menu_list">Direct To Bank</p>
+
         </a>
-        <a href="#" class="addCardOrBank-link">
-<!--            <span class="icon"><i class="bank_with_plus_sign"></i></span>-->
-            <button class="btnLogin-popup">Add card or bank</button>
+        <a href="#" class="menu_link">
+
+            <span class="menu_icon"><i class="fa-solid fa-building-columns"></i></span>
+            <p class="menu_list">Add card or bank</p>
+
         </a>
-        <a href="#" class="createAnInvoice-link">
-<!--            <span class="icon"><i class="document"></i></span>-->
-            <button class="btnLogin-popup">Create an invoice</button>
+        <a href="#" class="menu_link">
+
+            <span class="menu_icon"><i class="fa-solid fa-file-invoice"></i></span>
+            <p class="menu_list">Create an invoice</p>
+
         </a>
-        <a href="#" class="paypalcloneRewards-link">
-<!--            <span class="icon"><i class="trophy"></i></span>-->
-            <button class="btnLogin-popup">PayPal Clone Rewards</button>
+        <a href="#" class="menu_link">
+
+            <span class="menu_icon"><i class="fa-solid fa-trophy"></i></span>
+            <p class="menu_list">PayPal Clone Rewards</p>
+
         </a>
-        <a href="#" class="more3dots-link">
-<!--            <span class="icon"><i class="3dots"></i></span>-->
-            <button class="btnLogin-popup"></button>
+        <a href="#" class="menu_link">
+
+            <span class="menu_icon"><i class="fa-solid fa-ellipsis-vertical"></i></span>
+            <p class="menu_list"></p>
+
         </a>
     </div>
 
