--- a/src/main/resources/static/css/style-account.css
+++ b/src/main/resources/static/css/style-account.css
@@ -9,10 +9,310 @@
 
 body {
     display: flex;
-    justify-content: center;
-    align-items: center;
+    align-items: baseline;
     min-height: 100vh;
-    background-image: linear-gradient(rgba(50,30,10,0.6),rgba(50,30,10,0)), url('../img/image.jpg');
+    background-image: linear-gradient(rgba(50,30,10,0.3),rgba(50,30,10,0)), url(../img/image2.jpg);
     background-size: cover;
     background-position: center;
+    flex-direction: column;
+    flex-wrap: nowrap;
+    justify-content: space-evenly;
 }
+
+
+/*   HEADER   */
+
+
+.paypalAccount_header {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    padding: 20px 100px;
+    background-color: rgba(84,65,30,0.4);
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    z-index: 99;
+}
+
+.logo_acc {
+    font-size: 4em;
+    font-style: italic;
+    color: #cecece;
+    user-select: none;
+    text-shadow: 10px 10px 20px rgba(0, 0, 0, 20);
+    text-align: left;
+}
+
+.account_navigation a {
+    position: relative;
+    right: 750px;
+    font-size: 1.1em;
+    color: #cecece;
+    text-decoration: none;
+    font-weight: 500;
+    margin-right: 40px;
+}
+
+
+
+.account_navigation a::after {
+    content: "";
+    position: absolute;
+    left: 0;
+    bottom: -5px;
+    width: 100%;
+    height: 3px;
+    background: #cecece;
+    border-radius: 5x;
+    transform: scaleX(0);
+    transition: transform .5s;
+}
+
+.paypalAccount_header a:hover::after {
+    transform: scaleX(1);
+}
+
+.icon {
+    position: static;
+    right: 10px;
+    font-size: 20px;
+    color: #cecece;
+    font-weight: 500;
+    transition: .5s;
+    margin-right: 110px;
+    margin-left: -880px
+
+}
+
+.icon:hover {
+    font-size: 32px;
+}
+
+
+
+/*   FOOTER    */
+
+
+footer {
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    background-color: rgba(84,65,30,0.4);
+    color: #cecece;
+    text-align: left;
+    padding: 20px 100px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.logo_foot {
+    font-size: 2em;
+    color: #cecece;
+    user-select: none;
+    text-shadow: 10px 10px 20px rgba(0, 0, 0, 20);
+}
+
+.footer_nav a {
+    position: relative;
+    text-align: right;
+    right: 440px;
+    font-size: 1em;
+    color: #cecece;
+    text-decoration: none;
+    font-weight: 500;
+    margin-right: 10px;
+}
+
+.footer_nav a::after {
+    content: "";
+    position: absolute;
+    left: 0;
+    bottom: -5px;
+    width: 100%;
+    height: 3px;
+    background: #cecece;
+    border-radius: 5x;
+    transform: scaleX(0);
+    transition: transform .5s;
+}
+
+.footer_nav a:hover::after {
+    transform: scaleX(1);
+}
+
+.footer_nav .webName {
+    text-align: right;
+}
+
+/*   MY ACCOUNT PAGE STYLING   */
+
+
+.balance {
+    position: relative;
+    text-align: left;
+    bottom: 100px;
+    left: 50px;
+    width: 524px;
+    height: 215px;
+    background: #b1aca3a8;
+    border: 2px solid transparent;
+    outline: none;
+    border-radius: 18px;
+    font-size: 1.1em;
+    color: #341f13ef;
+    font-weight: 500;
+    margin: 40px;
+    padding: 10px;
+}
+
+.btnTransferMoney {
+    position: absolute;
+    left: -33px;
+    top: 170px;
+    width: 150px;
+    height: 35px;
+    background: #341f13;
+    border: 1px solid transparent;
+    border-radius: 30px;
+    cursor: pointer;
+    font-size: 1em;
+    text-align: center;
+    color: #cecece;
+    margin-left: 40px;
+    transition: .5s;
+}
+
+.btnTransferMoney:hover {
+    background: #75523eef;
+}
+
+
+.rewards {
+    position: relative;
+    text-align: left;
+    bottom: 100px;
+    left: 50px;
+    width: 524px;
+    height: 215px;
+    background: #b1aca3a8;
+    border: 2px solid transparent;
+    outline: none;
+    border-radius: 18px;
+    font-size: 1.1em;
+    color: #341f13ef;
+    font-weight: 500;
+    margin: 40px;
+    padding: 10px;
+}
+
+
+
+
+
+
+/*   MY ACCOUNT BUTTONS   */
+
+.button .btnSend {
+    position: absolute;
+    width: 200px;
+    height: 50px;
+    top: 150px;
+    right: 420px;
+    background:  #cb8a34;
+    border: 1px solid transparent;
+    outline: none;
+    border-radius: 30px;
+    cursor: pointer;
+    font-size: 1.1em;
+    text-align: center;
+    color: #341f13ef;
+    font-weight: 600;
+    margin-left: 40px;
+    transition: .5s;
+}
+
+.button .btnSend:hover {
+    background: #c5ad8c;
+}
+
+.button .btnRequest {
+    position: absolute;
+    width: 200px;
+    height: 50px;
+    top: 150px;
+    right: 200px;
+    background: #cb8a34;
+    border: 1px solid transparent;
+    border-radius: 30px;
+    cursor: pointer;
+    font-size: 1.1em;
+    text-align: center;
+    color: #341f13ef;
+    font-weight: 600;
+    margin-left: 40px;
+    transition: .5s;
+}
+
+
+.button .btnRequest:hover {
+    background: #c5ad8c;
+}
+
+
+/*   MY ACCOUNT ICONS    */
+
+.summary_menu_icon {
+    position: fixed;
+    top: 250px;
+    right: 100px;
+    flex-direction: row;
+    display: flex;
+    flex-wrap: nowrap;
+    justify-content: center;
+    text-align: center;
+    margin: -15px;
+}
+
+
+
+.menu_link .menu_icon {
+    font-size: 40px;
+    color: #cecece;
+    font-weight: 500;
+    padding: 14px;
+    border: 1px solid transparent;
+    border-radius: 40px;
+    background-color: #efebe05e;
+    transition: .5s;
+}
+
+.menu_link .menu_icon:hover {
+    background-color: transparent;
+}
+
+.menu_link .menu_list {
+    font-size: 15px;
+    color: #cecece;
+    font-weight: 500;
+    padding: 20px;
+    text-decoration: none;
+    transition: .5s;
+}
+
+.menu_link .menu_list:hover{
+    text-decoration: underline;
+}
+
+
+
+/*   SEND/REQUEST PAGE STYLING   */
+
+
+
+
+/*   MENU HEADER   */
+
