--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -219,9 +219,7 @@ footer {
     display: flex;
     justify-content: center;
     align-items: center;
-    /*  overflow: hidden;*/
-    /*  transform: scale(0);*/
-    /*  transition: transform .5s ease, height .2s ease;*/
+    overflow: hidden;
 }
 
 
@@ -251,6 +249,7 @@ footer {
 }
 
 
+
 .wrapper-register  {
     position: relative;
     width: 400px;
@@ -263,7 +262,7 @@ footer {
     display: flex;
     justify-content: center;
     align-items: center;
-    /*    overflow: hidden;*/
+    overflow: hidden;
 }
 
 .wrapper-register .form-box {
@@ -288,9 +287,9 @@ footer {
     right: 0;
     width: 45px;
     height: 45px;
-    background: #341f13ef;
-    font-size: 1.9em;
+    background: #936c39;
     color: #cecece;
+    font-size: 1.9em;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -301,7 +300,7 @@ footer {
 
 .form-box h2 {
     font-size: 2em;
-    color: #341f13ef;
+    color: #cecece;
     text-align: center;
 }
 
@@ -309,7 +308,7 @@ footer {
     position: relative;
     width: 100%;
     height: 50px;
-    border-bottom: 2px solid #341f13ef;
+    border-bottom: 2px solid #cecece;
     margin: 30px 0;
 }
 
@@ -319,7 +318,7 @@ footer {
     left: 5px;
     transform: translateY(-50%);
     font-size: 1.3em;
-    color: #341f13ef;
+    color: #cecece;
     font-weight: 500;
     pointer-events: none;
     transition: .5s;
@@ -337,7 +336,7 @@ footer {
     border: none;
     outline: none;
     font-size: 1.3em;
-    color: #341f13ef;
+    color: #cecece;
     font-weight: 540;
     padding: 0 35px 0 5px;
 }
@@ -346,13 +345,13 @@ footer {
     position: absolute;
     right: 8px;
     font-size: 1.4em;
-    color: #341f13ef;
+    color:#cecece;
     line-height: 57px;
 }
 
 .remember-forgot {
     font-size: 1em;
-    color: #341f13ef;
+    color: #967b57;
     font-weight: 500;
     margin: -15px 0 15px;
     display: flex;
@@ -360,12 +359,12 @@ footer {
 }
 
 .remember-forgot label input {
-    accent-color: #341f13ef;
+    accent-color: #936c39;
     margin-right: 3px;
 }
 
 .remember-forgot a {
-    color: #341f13ef;
+    color: #967b57;
     text-decoration: none;
 }
 
@@ -376,7 +375,7 @@ footer {
 .btn {
     width: 100%;
     height: 45px;
-    background: #341f13ef;
+    background: #936c39;
     border: none;
     outline: none;
     border-radius: 6px;
@@ -388,13 +387,13 @@ footer {
 
 .login-register {
     font-size: 1em;
-    color: #341f13ef;
+    color: #cecece;
     text-align: center;
     font-weight: 500;
     margin: 25px 0px 10px;
 }
 .login-register p a {
-    color: #341f13ef;
+    color: #967b57;
     text-align: left;
     text-decoration: none;
     font-weight: 600;
