--- a/src/main/resources/templates/profile_settings_page.html
+++ b/src/main/resources/templates/profile_settings_page.html
@@ -2,16 +2,15 @@
 <html xmlns:th="http:/>/www.thymeleaf.org" lang="en">
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Oops!</title>
-    <link rel="stylesheet" href="css/style.css">
+    <title>Your Profile</title>
+    <link rel="stylesheet" href="css/style-account.css">
     <script src="https://kit.fontawesome.com/49d89cdd8b.js" crossorigin="anonymous"></script>
 </head>
 <body>
-    <div th:replace="~{fragments :: header}"></div>
+    <div th:replace="~{fragments :: account_header}"></div>
     <div th:replace="~{fragments :: footer}"></div>
-
     <div>
-        <h1 class="oops">Oops! Something went wrong...</h1>
+        <h1>Your profile info will be here. Some day...</h1>
     </div>
 </body>
 </html>
